Spacing for invited users list class & fixes
- Fix disappearing right border on invite user modal
- Refactor rounded corners on login form
- Remove commented-out code from modals

--- a/ghost/admin/assets/sass/modules/objectlist.scss
+++ b/ghost/admin/assets/sass/modules/objectlist.scss
@@ -11,8 +11,8 @@
    Object List
    ========================================================================== */
 
-.object-list:not(:first-of-type) {
-    margin-top: 34px;
+.invited-users {
+    margin-bottom: 34px;
 }
 
 .object-list-title {
